--- a/css/style.css
+++ b/css/style.css
@@ -838,18 +838,22 @@ header:after {
   }
 }
 #primary-nav .nav-menu {
+  display: -webkit-flex;
   display: flex;
   position: relative;
   list-style: none;
-  margin: 0 0 0 -1px;
-  padding: 0 0 0 1px;
+  margin: 0;
+  padding: 0;
   position: relative;
   z-index: 100;
   overflow: visible;
+  flex-wrap: wrap;
+  align-items: stretch;
+  border-right: 1px solid #ccc;
 }
 #primary-nav li {
   list-style-type: none;
-  margin: 0 0 -1px 0;
+  margin: 0;
   position: relative;
 }
 #primary-nav .nav-item {
@@ -857,9 +861,10 @@ header:after {
   display: block;
   padding: 0;
   margin: 0;
-  float: left;
+  float: none;
   position: relative;
   overflow: visible;
+  flex: 1 0 auto;
 }
 #primary-nav .nav-item:first-child > a {
   border-left: 1px solid #ccc;
@@ -867,30 +872,41 @@ header:after {
 #primary-nav .nav-item > a {
   position: relative;
   display: inline-block;
-  margin: 0 0 -1px 0;
-  border: 1px solid #ccc;
-  border-bottom: 0;
+  margin: 0;
+  border-left: 1px solid #ccc;
+  border-top: 1px solid #ccc;
   height: 100%;
-}
-#primary-nav .nav-item:not(:first-child) > a {
-  margin-left: -1px;
+  width: 100%;
 }
 #primary-nav .nav-item > a:focus,
 #primary-nav .nav-item > a.open {
   border: 1px solid #dedede;
+  border-right: 0;
+  margin: 0 -1px 0 0;
   border-bottom: 0;
 }
 #primary-nav .nav-item > a.open {
   background-color: #fafafa;
   z-index: 1;
 }
+#primary-nav .nav-item > a.open:before {
+  content: "";
+  position: absolute;
+  right: -1px;
+  width: 1px;
+  top: 0;
+  background-color: #dedede;
+  bottom: 0;
+}
 #primary-nav .sub-nav {
   position: absolute;
   display: none;
-  margin-top: 1px;
+  margin-top: 0;
   padding: 0;
   border: 1px solid #dedede;
   background-color: #fff;
+  min-width: calc(100% + 1px);
+  z-index: 999;
 }
 #primary-nav .sub-nav.open {
   display: block;
